@@ -50,7 +50,6 @@ public:
 
     static const char* supplementName();
     static Vibration* from(Page* page) { return static_cast<Vibration*>(Supplement<Page>::from(page, supplementName())); }
-    static bool isActive(Page*);
 
     bool isVibrating() { return m_isVibrating; }
 
