@@ -1,3 +1,14 @@
+2014-03-05  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        Remove unused method from Vibration
+        https://bugs.webkit.org/show_bug.cgi?id=129732
+
+        Reviewed by Gyuyoung Kim.
+
+        * Modules/vibration/Vibration.cpp:
+        Removed isActive(), which is never called since r152441.
+        * Modules/vibration/Vibration.h: Ditto.
+
 2014-03-05  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r165141, r165157, and r165158.
